# adventofcode

./: .gitignore  README.md  pyproject.toml
2021/: README.md
2021/day01/: Cargo.toml
2021/day02/: Cargo.toml
2021/day03/: Cargo.toml
2021/day04/: Cargo.toml
2021/day05/: Cargo.toml
2021/day06/: Cargo.toml
2021/day08/: Cargo.toml
2021/day09/: Cargo.toml
2021/day10/: Cargo.toml
2021/day11/: Cargo.toml
2021/day12/: Cargo.toml
2021/day13/: Cargo.toml
2021/day14/: Cargo.toml
2021/day15/: Cargo.toml
2021/day16/: Cargo.toml
2021/day17/: Cargo.toml
2021/day18/: Cargo.toml
2021/day19/: Cargo.toml
2021/day20/: Cargo.toml
2021/day21/: Cargo.toml
2021/day22/: Cargo.toml
2022/day06/: day06.py
2022/day07/: day07.py
2022/day09/: part1.py  part2.py
2022/day10/: part1.py
2022/day12/: dijkstra.py
2022/day13/: part1.py  part2.py
2022/day15/: part1.py
2024/day13/: part1.py  part2.py  pyproject.toml
2024/day15/: part1.py  part2.py  pyproject.toml
day01/: day1.py
day02/: day2.py
day03/: day3.py
day04/: day4.py
day05/: day05.py
day08/: day08.py
day1/: day1.py
day10/: part2.py
day11/: part1.py  part2.py
day12/: part1.py  part2.py
day14/: part1.py  part2.py
day15/: part2.py
day16/: part1.py  part2.py
day17/: part1.py  part2.py
day18/: part1.py
day19/: part1.py
day2/: day2.py
day20/: part1.py  part2.py
day21/: part1_sympy.py  part2.py
day22/: cube.py  cube_test.py  part1.py  part2.py
day24/: part1.py
scripts/: setup-new-day.sh
setup/: default.py  default.rs  pyproject.toml  setup.py
(+147 files in other folders)
