[tool.poetry]
name = "day13"
version = "0.1.0"
description = ""
authors = ["Nick Doornekamp <nddoornekamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
numpy = "^2.2.0"
z3-solver = "^4.13.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "*.py"