[tool.poetry]
name = "day15"
version = "0.1.0"
description = ""
authors = ["Nick Doornekamp <nddoornekamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "*.py"